tests/runnable/test_06_print.hd
// test 6 : Tests print
// Parser / Lexer Valid: Yes

void main()
{
    print true ;
}