tests/invalid/test_26_nothing.hd
// test 26 : nothingness
// Parser / Lexer Valid: Yes